v2016-01-16
  * Add sitemap for baidu

v2016-01-15
  * New post "可能要换工作了"

v2016-01-11
  * New page 404
  * Enable Google Analytics

v2016-01-10
  * New post "软件和世界，愚者的中二之语"
  * Modify mail address
  * Modify "友情链接"

v2016-01-06.2
  * Modify "友情链接"

v2016-01-06
  * Binding domain

v2016-01-05
  * Modify "友情链接"

v2016-01-02
  * Remove jiathis
  * Add key for duoshuo

v2016-01-03
  * New post "随便写一点东西"
  * It Works!
