@@ -4,14 +4,22 @@
   <meta charset="utf-8"/>
   <title>页面不存在</title>
   <style>
-    body{
+    body {
       margin:0;
     }
-    a{
+    a {
+      display: inline-block;
+      margin-top: 2em;
       text-decoration: none;
       color: black;
+      transition: transform 1s;
     }
-    #fullpage{
+    a:hover {
+      color: red;
+      text-shadow: 0px 0px 10px red;
+      transform: rotate(360deg);
+    }
+    #fullpage {
       width: 100%;
       height: 100%;
       overflow: hidden;
@@ -22,7 +30,7 @@
       background-position: center;
       background-size: cover;
     }
-    #center{
+    #center {
       width: 80%;
       height: 70%;
       position: absolute;
@@ -33,14 +41,14 @@
       box-shadow: 2px 3px 5px black;
       border-radius: 5px 5px;
     }
-    #title{
+    #title {
       font-size: 3em;
       opacity: 1;
       text-align: center;
       font-weight: bold;
       padding: 0.5em;
     }
-    #content{
+    #content {
       padding: 2em;
       height: 2em;
       line-height: 2em;
