@@ -1,3 +1,7 @@
+v2016-01-19
+  * Modify build scripts
+  * Modify page 404
+
 v2016-01-16
   * Add sitemap for baidu
 
